Fix 5.7 default front covers to match 5.6 better (BL-13264)
Also adjust the margin settings in appearance-theme-default.css to match
the Default Margins table in docs.bloomlibrary.org better.

--- a/src/content/bookLayout/basePage.less
+++ b/src/content/bookLayout/basePage.less
@@ -632,7 +632,6 @@ div[data-book*="branding"] {
         padding-left: calc(var(--page-margin-left) + var(--page-gutter));
         padding-right: var(--page-margin-right);
     }
-
     &.outsideFrontCover,
     &.outsideBackCover {
         padding-top: var(--cover-margin-top);
@@ -642,9 +641,8 @@ div[data-book*="branding"] {
 
 // --------------------------------------------------------------------------------------
 // pages that are symmetrical left vs. right, so that we only use --page-margin-left
+// (or --cover-margin-side).
 // --------------------------------------------------------------------------------------
-.outsideFrontCover,
-.outsideBackCover,
 // if the page is set to a Device one
 .bloom-page[class*="Device"],
 .calendarFold,
@@ -658,6 +656,16 @@ div[data-book*="branding"] {
         // then use balanced margins, no gutter
         padding-left: var(--page-margin-left);
         padding-right: var(--page-margin-left);
+    }
+}
+// Although normally the same, the cover can have a different margin than the
+// inside pages. So we need to set the padding for the cover pages separately.
+.bloom-page.outsideBackCover,
+.bloom-page.outsideFrontCover {
+    &.side-left,
+    &.side-right {
+        padding-left: var(--cover-margin-side);
+        padding-right: var(--cover-margin-side);
     }
 }
 
@@ -774,6 +782,7 @@ The buffer would be absent if the marginBox had a border or the page has a backg
     /* All of these default to the general one, then can be overridden as needed */
     --cover-margin-top: var(--page-margin);
     --cover-margin-bottom: var(--page-margin);
+    --cover-margin-side: var(--page-margin);
     --page-margin-top: var(--page-margin);
     --page-margin-bottom: var(--page-margin);
     --page-margin-left: var(--page-margin);
